; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_sbcdsp.c_sbc_analyze_4b_8s_simd.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_sbcdsp.c_sbc_analyze_4b_8s_simd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 (i32*, i32*, i32)* }

@ff_sbcdsp_analysis_consts_fixed8_simd_odd = common dso_local global i32 0, align 4
@ff_sbcdsp_analysis_consts_fixed8_simd_even = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*, i32*, i32*, i32)* @sbc_analyze_4b_8s_simd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sbc_analyze_4b_8s_simd(%struct.TYPE_3__* %0, i32* %1, i32* %2, i32 %3) #0 {
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32 (i32*, i32*, i32)*, i32 (i32*, i32*, i32)** %10, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = getelementptr inbounds i32, i32* %12, i64 24
  %14 = load i32*, i32** %7, align 8
  %15 = load i32, i32* @ff_sbcdsp_analysis_consts_fixed8_simd_odd, align 4
  %16 = call i32 %11(i32* %13, i32* %14, i32 %15)
  %17 = load i32, i32* %8, align 4
  %18 = load i32*, i32** %7, align 8
  %19 = sext i32 %17 to i64
  %20 = getelementptr inbounds i32, i32* %18, i64 %19
  store i32* %20, i32** %7, align 8
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  %23 = load i32 (i32*, i32*, i32)*, i32 (i32*, i32*, i32)** %22, align 8
  %24 = load i32*, i32** %6, align 8
  %25 = getelementptr inbounds i32, i32* %24, i64 16
  %26 = load i32*, i32** %7, align 8
  %27 = load i32, i32* @ff_sbcdsp_analysis_consts_fixed8_simd_even, align 4
  %28 = call i32 %23(i32* %25, i32* %26, i32 %27)
  %29 = load i32, i32* %8, align 4
  %30 = load i32*, i32** %7, align 8
  %31 = sext i32 %29 to i64
  %32 = getelementptr inbounds i32, i32* %30, i64 %31
  store i32* %32, i32** %7, align 8
  %33 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 0
  %35 = load i32 (i32*, i32*, i32)*, i32 (i32*, i32*, i32)** %34, align 8
  %36 = load i32*, i32** %6, align 8
  %37 = getelementptr inbounds i32, i32* %36, i64 8
  %38 = load i32*, i32** %7, align 8
  %39 = load i32, i32* @ff_sbcdsp_analysis_consts_fixed8_simd_odd, align 4
  %40 = call i32 %35(i32* %37, i32* %38, i32 %39)
  %41 = load i32, i32* %8, align 4
  %42 = load i32*, i32** %7, align 8
  %43 = sext i32 %41 to i64
  %44 = getelementptr inbounds i32, i32* %42, i64 %43
  store i32* %44, i32** %7, align 8
  %45 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %46 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %45, i32 0, i32 0
  %47 = load i32 (i32*, i32*, i32)*, i32 (i32*, i32*, i32)** %46, align 8
  %48 = load i32*, i32** %6, align 8
  %49 = getelementptr inbounds i32, i32* %48, i64 0
  %50 = load i32*, i32** %7, align 8
  %51 = load i32, i32* @ff_sbcdsp_analysis_consts_fixed8_simd_even, align 4
  %52 = call i32 %47(i32* %49, i32* %50, i32 %51)
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
